--- a/Tools/fileobserver/build.gradle
+++ b/Tools/fileobserver/build.gradle
@@ -1,77 +1,52 @@
-apply plugin: 'com.android.library'
-import org.apache.tools.ant.taskdefs.condition.Os
+plugins {
+    id 'com.android.library'
+}
 
 android {
-    compileSdkVersion 28
-
-
+    compileSdk 32
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdk 21
+        targetSdk 32
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-    }
-    sourceSets {
-        main {
-            //让AS识别libs下的.so第三方包
-            jniLibs.srcDirs = ['src/main/libs']
-            jni.srcDirs =[]
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "proguard-rules.pro"
+        externalNativeBuild {
+            cmake {
+                cppFlags '-std=c++11'
+            }
         }
     }
 
     buildTypes {
         release {
+            minifyEnabled true   // 开启混淆
+            zipAlignEnabled true // Zipalign优化
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug{
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-//    tasks.withType(JavaCompile) {
-//        compileTask -> compileTask.dependsOn ndkBuild
-//    }
-
-
-}
-
-def isWindows() {
-    return System.properties['os.name'].contains('windows')
-}
-String getNdkBuildPath() {
-    Properties properties = new Properties()
-    properties.load(project.rootProject.file('local.properties').newDataInputStream())
-    def ndkBuildingDir = properties.getProperty("ndk.dir")
-    def ndkBuildPath = ndkBuildingDir
-//    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-       if (isWindows()){
-        ndkBuildPath = ndkBuildingDir + '/ndk-build.cmd'
-    } else {
-        ndkBuildPath = ndkBuildingDir + '/ndk-build'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
-    return ndkBuildPath
-}
+    externalNativeBuild {
+        cmake {
+            path file('src/main/cpp/CMakeLists.txt')
+            version '3.18.1'
+        }
+    }
 
-task ndkBuild(type: Exec, description: 'Compile JNI source via NDK') {
-    println('executing ndkBuild')
-    def ndkBuildPath = getNdkBuildPath();
-    commandLine ndkBuildPath, '-j4', '-C', file('src/main/jni').absolutePath
 }
-
-task ndkClean(type: Exec, description: 'clean JNI libraries') {
-    println('executing ndkBuild clean')
-    def ndkBuildPath = getNdkBuildPath();
-    commandLine ndkBuildPath, 'clean', '-C', file('src/main/jni').absolutePath
-}
-//clean.dependsOn 'ndkClean'
-
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'org.apache:apache:21'
+
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
